--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Email: hzy0902@pku.edu.cn <br />
 <p>My research interests are situated in quantum computing and quantum information. More precisely, I am interested in investigating structure 
 of problems, and applying techniques from TCS (such as complexity theory) and math (such as representation theory) to solve problems 
 in quantum computing. I have been doing research on quantum alogorithm for algebraic problems, such as supersingular isogeny problem 
-(a post-quantum crypto protocol SIKE is based on its intractabilit.) and hidden subgroup problem (HSP). I am also interested in 
+(a post-quantum crypto protocol SIKE is based on its intractability.) and hidden subgroup problem (HSP). I am also interested in 
 using theory in math and physics (such as category theory) to develop and discribe theories in quantum computing.   </p>
 <h2>Educations</h2>
 
