--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@ Expecting one!
 <ul>
     <li><p> Quantum Algorithms For Supersingular Isogeny Problem. <a href="pdf/isogeny.pdf"> [pdf] </a> 
     with Boyang Chen, Han Luo, advised by <a href="https://www.tongyangli.com/">Tongyang Li.</a> </p>
+    <ul>
+        <li>
+            Talk on <i>Learning by Research</i> <a href="pdf/LBR.pdf"> [slides] </a>. 2022.06.02 
+        </li>
+    </ul>
     <p>We made some attempts to improve existing algorithms for the supersingular isogeny problem using techniques in quantum walk,
          but failed due to the special structure of the problem. I wrote a survey about this problem, pointed out the hardness of the 
          problem and explained why we failed.
