complete the isogeny paper in 1:30 2022.10.16

--- a/index.html
+++ b/index.html
@@ -24,16 +24,17 @@ Email: hzy0902@pku.edu.cn <br />
 <h2>Bio</h2>
 <p>Currently I am an undergraduate student in the School of Electronic Engineering and Computer Science, Peking University.
     I major in computer science, and minor in mathematics.<br /></p>
-<p>My research interests are situated in quantum computing and quantum information. More precisely, I am interested in investigating structure 
+<p>My research interests are situated in quantum computing and quantum information. More precisely, I am interested in investigating mathematical structure 
 of problems, and applying techniques from TCS (such as complexity theory) and math (such as representation theory) to solve problems 
 in quantum computing. I have been doing research on quantum alogorithm for algebraic problems, such as supersingular isogeny problem 
-(the intractability of which has been the basis of a post-quantum crypto protocol SIKE.) and hidden subgroup problem (HSP). I am also interested in 
-using theory in math and physics (such as category theory) to develop and discribe theories in quantum computing.   </p>
+(the intractability of which has been the basis of a post-quantum crypto protocol SIKE.) and hidden subgroup problem (HSP). I am studying the 
+non-locality and the quantum interactive proof as well, because the structure behind it is quite attractive. I am also interested in 
+using theory in math and physics (such as category theory) to develop and discribe theories in quantum computing and quantum information.   </p>
 <h2>Educations</h2>
 
 
 <h4>
-    B.S, <a href="https://www.pku.edu.cn/">Peking University (PKU)</a> [2019.9 ~ 2023.6] 
+    B.S, <a href="https://www.pku.edu.cn/">Peking University (PKU)</a> [2019.9 ~ 2023.6]  
 
 </h4>
 
@@ -44,7 +45,7 @@ Expecting one!
 <h2>Research Experiences</h2>
 <ul>
     <li><p> Quantum Algorithms For Supersingular Isogeny Problem. <a href="pdf/isogeny.pdf"> [pdf] </a> 
-    with Boyang Chen, Han Luo, advised by <a href="https://www.tongyangli.com/">Tongyang Li.</a> </p>
+     advised by <a href="https://www.tongyangli.com/">Tongyang Li.</a> </p>
     <ul>
         <li>
             Talk on <i>Learning by Research</i> <a href="pdf/LBR.pdf"> [slides] </a>. 2022.06.02 
@@ -54,6 +55,11 @@ Expecting one!
          but failed due to the special structure of the problem. I wrote a survey about this problem, pointed out the hardness of the 
          problem and explained why we failed.
     </p>
+    </li>
+    <li>
+        <p>
+            Quantum Fourier Transform on Local Fields of Zero Charateristic. [pdf] advised by <a href="https://www.tongyangli.com/">Tongyang Li.</a>
+        </p>
     </li>
 </ul>
 
@@ -65,6 +71,13 @@ Expecting one!
             I am going to hold a seminar on physics and computing, discussing the relationship between them.
         </p> 
     </li>
+</ul>
+
+<h2>
+    Other experiences
+</h2>
+<ul>
+    I am a subreviewer in QIP 2022.
 </ul>
 
 <div id="footer">
