--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ using theory in math and physics (such as category theory) to develop and discri
 
 
 <h4>
-    B.S, <a href="https://www.pku.edu.cn/">Peking University (PKU)</a> [2019.9 ~ 2023.6]  
+    B.S, <a href="https://www.pku.edu.cn/">Peking University (PKU)</a> [2019.9 ~ 2023.6](expected)  
 
 </h4>
 
@@ -66,9 +66,9 @@ Expecting one!
 <h2>Seminar</h2>
 <ul>
     <li>
-        Seminar on Physics and Computing [2022 Winter]<br />
+        <a href="seminar.html">Seminar on Physics and Computation</a> <a href="pdf/Syllabus.pdf">[Syllabus]</a>  [2022 Winter]  <br />
         <p>
-            I am going to hold a seminar on physics and computing, discussing the relationship between them.
+            I am going to hold a seminar on physics and computation, discussing the relationship between them.
         </p> 
     </li>
 </ul>
@@ -77,7 +77,7 @@ Expecting one!
     Other experiences
 </h2>
 <ul>
-    I am a subreviewer in QIP 2022.
+    I am a subreviewer in QIP 2023.
 </ul>
 
 <div id="footer">
