change the intro for the seminar

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@ Expecting one!
     <li>
         <a href="seminar.html">Seminar on Physics and Computation</a> <a href="pdf/Syllabus.pdf">[Syllabus]</a>  [2022 Winter]  <br />
         <p>
-            I am going to hold a seminar on physics and computation, discussing the relationship between them.
+            I am going to hold a seminar on physics and computation, discussing the connection between them, going beyond the fundemantal 
+            connection established by quantum computing.
         </p> 
     </li>
 </ul>
