update readme and index

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <a href="https://eecs.pku.edu.cn/">School of Electronic Engineering and Computer Science</a> <br />
 <a href="http://www.pku.edu.cn/">Peking University</a> <br />
 No.5 Yiheyuan Road, Haidian District, Beijing 100871, P.R.China <br /> 
-Email: hzy0902@pku.edu.cn <br />
+Email: hanzy@pku.edu.cn <br />
+<a href="pdf/cv.pdf">[Curriculum Vitae]</a>
 <br />
 </td></tr></table>
 <h2>Bio</h2>
@@ -44,7 +45,7 @@ using theory in math and physics (such as category theory) to develop and discri
 Expecting one!
 <h2>Research Experiences</h2>
 <ul>
-    <li><p> Quantum Algorithms For Supersingular Isogeny Problem. <a href="pdf/isogeny.pdf"> [pdf] </a> 
+    <li><p> Quantum Algorithms For Supersingular Isogeny Problems. <a href="pdf/isogeny.pdf"> [pdf] </a> 
      advised by <a href="https://www.tongyangli.com/">Tongyang Li.</a> </p>
     <ul>
         <li>
