change picture to cycle

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h1>Zhengyi Han (韩正一)</h1>
 </div>
 <table class="imgtable"><tr><td>
-<a href="https://pkucshzy.github.io/"><img src="picture/hzy_2020_home.jpg" alt="alt text" width="120px" /></a>&nbsp;</td>
+<a href="https://pkucshzy.github.io/"><img src="picture/cycle.jpg" alt="alt text" width="120px" /></a>&nbsp;</td>
 <td align="left"><p>B.S Student<br />
 <a href="https://eecs.pku.edu.cn/">School of Electronic Engineering and Computer Science</a> <br />
 <a href="http://www.pku.edu.cn/">Peking University</a> <br />
