add research experience

--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@ Expecting one!
             Quantum Fourier Transform on Local Fields of Zero Charateristic. [pdf] advised by <a href="https://www.tongyangli.com/">Tongyang Li.</a>
         </p>
     </li>
+    <li>
+        <p>
+            Compression Theorem of Nonlocal Games. advised by Zhengfeng Ji.
+        </p>
+    </li>
 </ul>
 
 <h2>Seminar</h2>
