fix information about seminar

--- a/seminar.html
+++ b/seminar.html
@@ -293,7 +293,23 @@ pre[data-line] .line-highlight[data-end]:after {
 wechat: 18813023182<br>
 email: <a href="mailto:hanzy@pku.edu.cn">hanzy@pku.edu.cn</a><br>
 website: <a href="https://pkucshzy.github.io/seminar">https://pkucshzy.github.io/seminar</a></p>
-<p>This is an seminar about recent connecting between computational complexity and physics, going beyond the fundamental connection established by quantum computing. The seminar is based on the course Scott Aaronson instructed in MIT, Fall 2015. His website is <a href="https://stellar.mit.edu/S/course/6/fa15/6.S899/">6.S899 Class Home (mit.edu)</a>.  Topics will include: topological quantum computing; topological order; quantum computing with bosons and fermions (e.g., BosonSampling and FermionSampling); computational aspects of the black-hole firewall problem and the AdS/CFT correspondence; Hamiltonian complexity and quantum interactive proof; quantum computing with closed timelike curves and quantum algorithm for quantum field theory. The seminar aims to provide a platform for interdisciplinary communication. Note that the goal of this seminar is not to dig into a specific technique of some area, but to  understand basic ideas in this interdisciplinary  field. And this seminar is not for experimental physics and numerical expeiments.</p>
+<p>This is an seminar about recent connecting between computational complexity and physics, going beyond the fundamental connection established by quantum computing. The seminar is based on the course Scott Aaronson instructed in MIT, Fall 2015. His website is <a href="https://stellar.mit.edu/S/course/6/fa15/6.S899/">6.S899 Class Home (mit.edu)</a>. </p>
+  <p>Currently, I have two main directions to explore: <br>
+  1. the connection between quantum information and high energy physics, such as Ads/CFT duality, quantum gravity, black hole and holography. <br>
+  2. the connection between quantum information and condensed matter physics, such as local Hamiltonians, many-body entangle, long-range entanglement, topological order and topological quantum field theory.</p>
+<p>The seminar aims to provide a platform for interdisciplinary communication. There are other related papers in the following. 
+If you have suggestions on any aspects of this seminar, do not hesitate to reach out to me!
+Note that the goal of this seminar is not to dig into a specific technique of some area, but to understand basic ideas in this interdisciplinary  field. And this seminar is not for experimental physics and numerical expeiments.<br> </p>
+
+<h2 class="mume-header" id="References">References</h2>
+Daniel Harlow. <a href="https://arxiv.org/abs/1409.1231">[1409.1231] Jerusalem Lectures on Black Holes and Quantum Information</a> <br>
+Bei Zeng, Xie Chen, Duan-Lu Zhou, Xiao-Gang Wen.<a href="https://arxiv.org/abs/1508.02595">[1508.02595] Quantum Information Meets Quantum Matter -- From Quantum Entanglement to Topological Phase in Many-Body Systems</a>
+
+<h3 class="mume-header" id="Other resources">Other Resources</h3>
+Hossein Yavartanoo. <a href="https://bimsa.net:10000/activity/quaaspblkhol/">Quantum Aspects of Black Holes</a>. The course webpage at BIMSA. <br>
+Shuhan Ye. <a href="https://zhuanlan.zhihu.com/p/466937989">Courses in topological quantum field theory, topological phases and topological quantum computing</a>. Article on Zhihu.
+
+
 <h2 class="mume-header" id="suggested-papers">Suggested Papers</h2>
 
 <h3 class="mume-header" id="topological-order-and-topological-quantum-field-theory">Topological Order and Topological Quantum Field Theory</h3>
