--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@ Expecting one!
 <h2>
     Other experiences
 </h2>
+
+<h2>Talks</h2>
+<ul>
+    <li>
+        Quantum Algorithms for Hidden Subgroup Problems. <a href="pdf/hsp.pdf">[Notes]</a> 2023.3.15
+        A talk on the <a href="https://finite-dimensional.space/doku.php?id=seminar:2023spring">Seminar on Quantum Algorithms</a>, held by Zhengfeng Ji, 2023 Spring.
+    </li>
+</ul>
 <ul>
     I am a subreviewer in QIP 2023.
 </ul>
