adding the LH notes

--- a/seminar.html
+++ b/seminar.html
@@ -301,6 +301,9 @@ website: <a href="https://pkucshzy.github.io/seminar">https://pkucshzy.github.io
 If you have suggestions on any aspects of this seminar, do not hesitate to reach out to me!
 Note that the goal of this seminar is not to dig into a specific technique of some area, but to understand basic ideas in this interdisciplinary  field. And this seminar is not for experimental physics and numerical expeiments.<br> </p>
 
+
+Lecture 1 <a href="./pdf/LH.pdf">Local Hamiltonian and the quantum PCP conjecture</a>. Lecturer: Zhengyi Han 25th, Mar.
+
 <h2 class="mume-header" id="References">References</h2>
 Daniel Harlow. <a href="https://arxiv.org/abs/1409.1231">[1409.1231] Jerusalem Lectures on Black Holes and Quantum Information</a> <br>
 Bei Zeng, Xie Chen, Duan-Lu Zhou, Xiao-Gang Wen.<a href="https://arxiv.org/abs/1508.02595">[1508.02595] Quantum Information Meets Quantum Matter -- From Quantum Entanglement to Topological Phase in Many-Body Systems</a>
