--- a/seminar.html
+++ b/seminar.html
@@ -301,8 +301,10 @@ website: <a href="https://pkucshzy.github.io/seminar">https://pkucshzy.github.io
 If you have suggestions on any aspects of this seminar, do not hesitate to reach out to me!
 Note that the goal of this seminar is not to dig into a specific technique of some area, but to understand basic ideas in this interdisciplinary  field. And this seminar is not for experimental physics and numerical expeiments.<br> </p>
 
+<h2 class="mume-header" id="Scribe Notes">Scribe Notes</h2>
 
-Lecture 1 <a href="./pdf/LH.pdf">Local Hamiltonian and the quantum PCP conjecture</a>. Lecturer: Zhengyi Han 25th, Mar.
+Lecture 1. Local Hamiltonian and the Quantum PCP Conjecture <a href="./pdf/LH.pdf">[Notes]</a>. Lecturer: Zhengyi Han 25th, Mar.
+Lecture 2. Entanglement Area Law <a href="./pdf/area.pdf">[Notes]</a>. Lecturer: Zhaohui Xu 2nd, Apr. 
 
 <h2 class="mume-header" id="References">References</h2>
 Daniel Harlow. <a href="https://arxiv.org/abs/1409.1231">[1409.1231] Jerusalem Lectures on Black Holes and Quantum Information</a> <br>
