rename the seminar

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Expecting one!
 <h2>Seminar</h2>
 <ul>
     <li>
-        <a href="seminar.html">Seminar on Physics and Computation</a> <a href="pdf/Syllabus.pdf">[Syllabus]</a>  [2022 Winter]  <br />
+        <a href="seminar.html">Seminar on Quantum Information and Theoretical Physics</a> <a href="pdf/Syllabus.pdf">[Syllabus]</a>  [2022 Winter]  <br />
         <p>
             I am going to hold a seminar on physics and computation, discussing the connection between them, going beyond the fundemantal 
             connection established by quantum computing.
