--- a/seminar.html
+++ b/seminar.html
@@ -285,7 +285,7 @@ pre[data-line] .line-highlight[data-end]:after {
     </head>
     <body for="html-export">
       <div class="mume markdown-preview  ">
-      <h1 class="mume-header" id="seminar-on-computation-and-physics">Seminar on Computation and Physics</h1>
+      <h1 class="mume-header" id="seminar-on-computation-and-physics">Seminar on Quantum Information and Theoretical Physics</h1>
 
 <h4 class="mume-header" id="organizer">Organizer</h4>
 
