--- a/seminar.html
+++ b/seminar.html
@@ -302,9 +302,17 @@ If you have suggestions on any aspects of this seminar, do not hesitate to reach
 Note that the goal of this seminar is not to dig into a specific technique of some area, but to understand basic ideas in this interdisciplinary  field. And this seminar is not for experimental physics and numerical expeiments.<br> </p>
 
 <h2 class="mume-header" id="Scribe Notes">Scribe Notes</h2>
-
-Lecture 1. Local Hamiltonian and the Quantum PCP Conjecture <a href="./pdf/LH.pdf">[Notes]</a>. Lecturer: Zhengyi Han 25th, Mar.
-Lecture 2. Entanglement Area Law <a href="./pdf/area.pdf">[Notes]</a>. Lecturer: Zhaohui Xu 2nd, Apr. 
+<l1>
+  <p>
+Lecture 1. Local Hamiltonian and the Quantum PCP Conjecture <a href="./pdf/LH.pdf">[Notes]</a>. &nbsp Lecturer: Zhengyi Han &nbsp 25th, Mar.
+  </p>
+</l1>
+<l1>
+  <p>
+    Lecture 2. Entanglement Area Law <a href="./pdf/area.pdf">[Notes]</a>. &nbsp Lecturer: Zhaohui Xu &nbsp 2nd, Apr.
+  </p>
+</l1>
+ 
 
 <h2 class="mume-header" id="References">References</h2>
 Daniel Harlow. <a href="https://arxiv.org/abs/1409.1231">[1409.1231] Jerusalem Lectures on Black Holes and Quantum Information</a> <br>
