--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@ Email: hanzy@pku.edu.cn <br />
 <h2>Bio</h2>
 <p>Currently I am an undergraduate student in the School of Electronic Engineering and Computer Science, Peking University.
     I major in computer science, and minor in mathematics.<br /></p>
-<p>My research interests are situated in quantum computing and quantum information. More precisely, I am interested in investigating mathematical structure 
-of problems, and applying techniques from TCS (such as complexity theory) and math (such as representation theory) to solve problems 
-in quantum computing. I have been doing research on quantum alogorithm for algebraic problems, such as supersingular isogeny problem 
-(the intractability of which has been the basis of a post-quantum crypto protocol SIKE.) and hidden subgroup problem (HSP). I am studying the 
-non-locality and the quantum interactive proof as well, because the structure behind it is quite attractive. I am also interested in 
-using theory in math and physics (such as category theory) to develop and discribe theories in quantum computing and quantum information.   </p>
+<p>My research interests are situated in quantum information. I love problems
+    which can provide insights in quantum information and help us to understand 
+    the structure of entanglement and unentanglement. Based on such interests, I am 
+    curious about quantum cryptography and quantum complexity theory. I think 
+    the quantum information is not an isolated field. It can gain insights from in many scientific fields. 
+    It can also inspire other researchers in such fields. So I am also interested in the interplay and connection
+     with theoretical physics and math (such as the algebraic and topological structure).   </p>
 <h2>Educations</h2>
 
 
