--- a/seminar.html
+++ b/seminar.html
@@ -317,7 +317,9 @@ Lecture 1. Local Hamiltonian and the Quantum PCP Conjecture <a href="./pdf/LH.pd
 <h2 class="mume-header" id="References">References</h2>
 Daniel Harlow. <a href="https://arxiv.org/abs/1409.1231">[1409.1231] Jerusalem Lectures on Black Holes and Quantum Information</a> <br>
 Bei Zeng, Xie Chen, Duan-Lu Zhou, Xiao-Gang Wen.<a href="https://arxiv.org/abs/1508.02595">[1508.02595] Quantum Information Meets Quantum Matter -- From Quantum Entanglement to Topological Phase in Many-Body Systems</a> <br>
-Thomas Vidick.  <a href="http://users.cms.caltech.edu/~vidick/teaching/286_qPCP/index.html"> Seminar in Computer Science -- Around the quantum PCP conjecture</a>. Lecture at Caltech.
+Thomas Vidick.  <a href="http://users.cms.caltech.edu/~vidick/teaching/286_qPCP/index.html"> Seminar in Computer Science -- Around the quantum PCP conjecture</a>. Course at Caltech.<br>
+Henry Yuan <a href="http://www.henryyuen.net/classes/spring2022/">Frontiers of Quantum Complexity and Cryptography</a>. Course at Columbia.<br>
+
 
 <h3 class="mume-header" id="Other resources">Other Resources</h3>
 Hossein Yavartanoo. <a href="https://bimsa.net:10000/activity/quaaspblkhol/">Quantum Aspects of Black Holes</a>. The course webpage at BIMSA. <br>
