--- a/seminar.html
+++ b/seminar.html
@@ -312,6 +312,11 @@ Lecture 1. Local Hamiltonian and the Quantum PCP Conjecture <a href="./pdf/LH.pd
     Lecture 2. Entanglement Area Law <a href="./pdf/area.pdf">[Notes]</a>. &nbsp Lecturer: Zhaohui Xu &nbsp 2nd, Apr.
   </p>
 </l1>
+<l1>
+  <p>
+    Lecture 3. Tensor Network and Matrix Product State <a href="./pdf/MPS.pdf">[Notes]</a>. &nbsp Lecturer: Wentai Deng &nbsp 16th, Apr.
+  </p>
+</l1>
  
 
 <h2 class="mume-header" id="References">References</h2>
