--- a/seminar.html
+++ b/seminar.html
@@ -324,6 +324,8 @@ Daniel Harlow. <a href="https://arxiv.org/abs/1409.1231">[1409.1231] Jerusalem L
 Bei Zeng, Xie Chen, Duan-Lu Zhou, Xiao-Gang Wen.<a href="https://arxiv.org/abs/1508.02595">[1508.02595] Quantum Information Meets Quantum Matter -- From Quantum Entanglement to Topological Phase in Many-Body Systems</a> <br>
 Thomas Vidick.  <a href="http://users.cms.caltech.edu/~vidick/teaching/286_qPCP/index.html"> Seminar in Computer Science -- Around the quantum PCP conjecture</a>. Course at Caltech.<br>
 Henry Yuan <a href="http://www.henryyuen.net/classes/spring2022/">Frontiers of Quantum Complexity and Cryptography</a>. Course at Columbia.<br>
+Scott Aaronson <a href="https://www.scottaaronson.com/qisii.pdf">Introduction to Quantum Information Science II</a>. Course at UT Austin. <br>
+Scott Aaronson <a href="https://www.scottaaronson.com/barbados-2016.pdf">The Complexity of Quantum States and Transformations: From Quantum Money to Black Holes</a>. Lecture notes for the 28th McGill Invitational Workshop on Computational Complexity. <br>
 
 
 <h3 class="mume-header" id="Other resources">Other Resources</h3>
