--- a/seminar.html
+++ b/seminar.html
@@ -326,7 +326,7 @@ Thomas Vidick.  <a href="http://users.cms.caltech.edu/~vidick/teaching/286_qPCP/
 Henry Yuan <a href="http://www.henryyuen.net/classes/spring2022/">Frontiers of Quantum Complexity and Cryptography</a>. Course at Columbia.<br>
 Scott Aaronson <a href="https://www.scottaaronson.com/qisii.pdf">Introduction to Quantum Information Science II</a>. Course at UT Austin. <br>
 Scott Aaronson <a href="https://www.scottaaronson.com/barbados-2016.pdf">The Complexity of Quantum States and Transformations: From Quantum Money to Black Holes</a>. Lecture notes for the 28th McGill Invitational Workshop on Computational Complexity. <br>
-
+Leonard Susskind <a href="https://arxiv.org/pdf/1301.4505.pdf">Black Hole Complementarity and the  Harlow-Hayden Conjecture</a>. On the occasion of John Preskill’s 60th birthday.<br>
 
 <h3 class="mume-header" id="Other resources">Other Resources</h3>
 Hossein Yavartanoo. <a href="https://bimsa.net:10000/activity/quaaspblkhol/">Quantum Aspects of Black Holes</a>. The course webpage at BIMSA. <br>
