--- a/seminar.html
+++ b/seminar.html
@@ -320,13 +320,55 @@ Lecture 1. Local Hamiltonian and the Quantum PCP Conjecture <a href="./pdf/LH.pd
  
 
 <h2 class="mume-header" id="References">References</h2>
-Daniel Harlow. <a href="https://arxiv.org/abs/1409.1231">[1409.1231] Jerusalem Lectures on Black Holes and Quantum Information</a> <br>
-Bei Zeng, Xie Chen, Duan-Lu Zhou, Xiao-Gang Wen.<a href="https://arxiv.org/abs/1508.02595">[1508.02595] Quantum Information Meets Quantum Matter -- From Quantum Entanglement to Topological Phase in Many-Body Systems</a> <br>
-Thomas Vidick.  <a href="http://users.cms.caltech.edu/~vidick/teaching/286_qPCP/index.html"> Seminar in Computer Science -- Around the quantum PCP conjecture</a>. Course at Caltech.<br>
-Henry Yuan <a href="http://www.henryyuen.net/classes/spring2022/">Frontiers of Quantum Complexity and Cryptography</a>. Course at Columbia.<br>
-Scott Aaronson <a href="https://www.scottaaronson.com/qisii.pdf">Introduction to Quantum Information Science II</a>. Course at UT Austin. <br>
-Scott Aaronson <a href="https://www.scottaaronson.com/barbados-2016.pdf">The Complexity of Quantum States and Transformations: From Quantum Money to Black Holes</a>. Lecture notes for the 28th McGill Invitational Workshop on Computational Complexity. <br>
-Leonard Susskind <a href="https://arxiv.org/pdf/1301.4505.pdf">Black Hole Complementarity and the  Harlow-Hayden Conjecture</a>. On the occasion of John Preskill’s 60th birthday.<br>
+<ul>
+  <li>
+    <p>
+      <i>Daniel Harlow.</i> <a href="https://arxiv.org/abs/1409.1231">[1409.1231] Jerusalem Lectures on Black Holes and Quantum Information</a> <br>
+    </p>
+  </li>
+  <li>
+    <p>
+      <i>Bei Zeng, Xie Chen, Duan-Lu Zhou, Xiao-Gang Wen.</i> <a href="https://arxiv.org/abs/1508.02595">[1508.02595] Quantum Information Meets Quantum Matter -- From Quantum Entanglement to Topological Phase in Many-Body Systems</a> <br>
+    </p>
+  </li>
+  <li>
+    <p>
+      <i>Thomas Vidick.</i>  <a href="http://users.cms.caltech.edu/~vidick/teaching/286_qPCP/index.html"> Seminar in Computer Science -- Around the quantum PCP conjecture</a>. Course at Caltech.<br>
+    </p>
+  </li>
+  <li>
+    <p>
+      <i>Henry Yuan.</i> <a href="http://www.henryyuen.net/classes/spring2022/">Frontiers of Quantum Complexity and Cryptography</a>. Course at Columbia.<br>
+    </p>
+  </li>
+  <li>
+    <p>
+      <i>Scott Aaronson.</i> <a href="https://www.scottaaronson.com/qisii.pdf">Introduction to Quantum Information Science II</a>. Course at UT Austin. <br>
+    </p>
+  </li>
+  <li>
+    <p>
+      <i>Scott Aaronson.</i> <a href="https://www.scottaaronson.com/barbados-2016.pdf">The Complexity of Quantum States and Transformations: From Quantum Money to Black Holes</a>. Lecture notes for the 28th McGill Invitational Workshop on Computational Complexity. <br>
+    </p>
+  </li>
+  <li>
+    <p>
+      <i>Leonard Susskind.</i> <a href="https://arxiv.org/pdf/1301.4505.pdf">Black Hole Complementarity and the  Harlow-Hayden Conjecture</a>. On the occasion of John Preskill’s 60th birthday.<br>
+    </p>
+  </li>
+  <li>
+    <p>
+      <i>Adam Bouland, Bill Fefferman, and Umesh Vazirani.</i> <a href="https://arxiv.org/pdf/1910.14646.pdf">Computational pseudorandomness, the wormhole growth paradox, and constraints on the AdS/CFT duality</a><br>
+    </p>
+  </li>
+  <li>
+    <p>
+      <i>Zvika Brakerski.</i> <a href="https://arxiv.org/pdf/2211.05491.pdf">Black-Hole Radiation Decoding is Quantum Cryptography</a><br>
+    </p>
+  </li>
+  
+
+</ul>
 
 <h3 class="mume-header" id="Other resources">Other Resources</h3>
 Hossein Yavartanoo. <a href="https://bimsa.net:10000/activity/quaaspblkhol/">Quantum Aspects of Black Holes</a>. The course webpage at BIMSA. <br>
