--- a/seminar.html
+++ b/seminar.html
@@ -338,6 +338,11 @@ Lecture 1. Local Hamiltonian and the Quantum PCP Conjecture <a href="./pdf/LH.pd
   </li>
   <li>
     <p>
+      <i>Juan Castaneda.</i> <a href="http://www.henryyuen.net/fall2020/projects/arealaws.pdf"> Final Project about Area Law</a>.<br>
+    </p>
+  </li>
+  <li>
+    <p>
       <i>Henry Yuan.</i> <a href="http://www.henryyuen.net/classes/spring2022/">Frontiers of Quantum Complexity and Cryptography</a>. Course at Columbia.<br>
     </p>
   </li>
@@ -349,6 +354,18 @@ Lecture 1. Local Hamiltonian and the Quantum PCP Conjecture <a href="./pdf/LH.pd
   <li>
     <p>
       <i>Scott Aaronson.</i> <a href="https://www.scottaaronson.com/barbados-2016.pdf">The Complexity of Quantum States and Transformations: From Quantum Money to Black Holes</a>. Lecture notes for the 28th McGill Invitational Workshop on Computational Complexity. <br>
+    </p>
+  </li>
+  <li>
+    <p>
+      <i>Ahmed Almheiri, Donald Marolf, Joseph Polchinski, James Sully</i>. <a href="https://arxiv.org/abs/1207.3123">Black Holes: Complementarity or Firewalls?</a> <br>
+    </p>
+  </li>
+
+
+  <li>
+    <p>
+      <i>Daniel Harlow, Patric Hayden.</i> <a href="https://arxiv.org/abs/1301.4504">Quantum Computation vs. Firewalls</a>. <br>
     </p>
   </li>
   <li>
